--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,14 +1,11 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - 1saacRankin
 
 repo_description_lines_max: 2
 
 github_repos:
-  - alshedivat/al-folio
-  - jekyll/jekyll
-  - twbs/bootstrap
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - mathjax/MathJax
-  - jpswalsh/academicons
+  - 1saacRankin/rotationally-symmetric-VI
+  - 1saacRankin/rebate-checker
+  - 1saacRankin/GPX-plotter
+  - 1saacRankin/Chinook-Financial-Extractor-app
+  - 1saacRankin/Chinook-CCC-app
